name:                instructions
version:             0.0.1
author:              Renzo Carbonara
maintainer:          renzo@carbonara.com.ar
copyright:           Renzo Carbonara 2016
license:             BSD3
license-file:        LICENSE.txt
category:            DSLs
build-type:          Simple
cabal-version:       >=1.8
synopsis:            Build DSLs and effectful interpreters using free monads.
description:         Build DSLs and effectful interpreters using free monads.

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >=4.8 && <4.9
    , free >=4.12 && <4.13
  exposed-modules:
      Control.Instructions
